[tool.poetry]
name = "python-redis-singleton"
version = "0.1.0"
description = ""
authors = ["Bruno Fioreze"]
readme = "README.md"
packages = [{include = "python_redis_singleton"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
